--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,17 @@
     font-family: Verdana, sans-serif;
 }
 
+@font-face {
+    font-family: Roboto;
+    src: url('../fonts/Roboto/Roboto-Regular.ttf');
+}
+
+@font-face {
+    font-family: Oswald;
+    src: url('../fonts/Oswald/Oswald-Regular.ttf');
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -20,12 +31,14 @@
 
 }
 
-header.cabecalho {
-    display: block;
+#interface header.cabecalho {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     color: #fafafa;
     height: 100%;
-    background-image: url(../imagens/hero-bg.png);
+    background-image: url('../imagens/hero-bg.png');
+    background-size: cover;
 
 }
 
@@ -34,7 +47,7 @@ header.cabecalho {
     justify-content: space-between;
     width: 70%;
     margin: 0 auto;
-
+    padding: 1rem 0;
 }
 
 #interface .cabecalho .logo {
@@ -62,8 +75,44 @@ header.cabecalho {
 #interface .cabecalho .menu li a {
     display: block;
     color: #fafafa;
-    font-size: 1.5rem;
+    font-family: Oswald;
+    font-size: 2rem;
     padding: .5rem 1rem;
     text-decoration: none; 
 }
+
+#interface .cabecalho .menu li a::after {
+    display: block;
+    content: '';
+    width: 0;
+    height: 4px;
+    background-color: #9941bf;
+    border-radius: 1px;
+    margin-top: .1rem;
+    transition: width .2s ease;
+}
+
+#interface .cabecalho .menu li:hover a::after {
+    width: 100%;
+}
+#interface .cabecalho .titles {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    margin: 0 auto;
+}
+
+#interface .cabecalho .titles .container-titles {
+    border: 1pX solid yellow;
+    width: 65%;
+    margin: 0 0 0 auto;
+}
+
+#interface .cabecalho .titles .container-titles h1 {
+    font-family: Roboto;
+}
+
+
 
