--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,6 +32,7 @@
     height: 100vh;
     min-height: 100vh;
     overflow-x: hidden;
+    background-color: #fafafa;
 }
 
 #interface header.cabecalho {
@@ -49,6 +50,7 @@
     justify-content: space-between;
     width: 70%;
     margin: 0 auto;
+    padding: 2rem 0;
 }
 
 #interface .cabecalho .logo {
@@ -139,5 +141,53 @@
 #interface .cabecalho .titles .socialIcons a {
     color: #9941bf;
     padding: .5rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+}
+
+/* ======================================================================================= */
+
+#interface #corpo {
+    display: block;
+    width: 100%;
+}
+
+#interface #corpo .servicos {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: 0 auto;
+    padding: 10rem 0;
+}
+
+#interface #corpo .servicos article {
+    display: block;
+    width: 30%;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .2);
+    border-radius: .5rem;
+    margin-bottom: 3rem;
+    padding: 2rem;
+}
+
+#interface #corpo .servicos article img {
+    display: block;
+    width: 35%;
+    margin: 0 auto 2rem auto;
+}
+
+#interface #corpo .servicos article h3 {
+    display: block;
+    text-align: center;
+    font-family: Roboto;
+    color: #3c6aa6;
+    font-weight: normal;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+#interface #corpo .servicos article p {
+    display: block;
+    text-align: center;
+    color: #666;
+    line-height: 1.5;
 }
