--- a/css/estilos.css
+++ b/css/estilos.css
@@ -291,7 +291,7 @@
     background-color: #2b5995;
 }
 
-/*-----------------------------------------------------------------------------------------------------------------*/
+/* ======================================================================================= */
 
 #interface #corpo .contato {
     display: block;
@@ -301,20 +301,20 @@
 }
 
 #interface #corpo .contato .title-contato {
-        display: block;
-        text-align: center;
-        font-size: 2rem;
-        font-weight: normal;
-        font-family: Roboto;
-        color: var(--azul-padrao);
-        margin-bottom: 1rem;
+    display: block;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: normal;
+    font-family: Roboto;
+    color: var(--azul-padrao);
+    margin-bottom: 1rem;
 }
-    
+
 #interface #corpo .contato .sub-title {
-        display: block;
-        text-align: center;
-        font-size: 1.2rem;
-        color: var(--marrom-padrao);
+    display: block;
+    text-align: center;
+    font-size: 1.2rem;
+    color: var(--marrom-padrao);
 }
 
 #interface #corpo .contato .container-contato {
@@ -333,7 +333,7 @@
 #interface #corpo .contato .container-contato .dados-contato .title-aside {
     display: block;
     font-size: 1.1rem;
-    font-weight: normal; 
+    font-weight: normal;
     margin: 2rem 0 .5rem 0;
 }
 
@@ -385,4 +385,148 @@
 
 #interface #corpo .contato .container-contato form button:hover {
     background-color: #2b5995;
+}
+
+/* ======================================================================================= */
+
+#interface #rodape {
+    display: block;
+    width: 100%;
+    background-image: url(../imagens/hero-bg.png);
+    background-size: cover;
+    background-position-y: center;
+}
+
+#interface #rodape .sombreamento {
+    display: block;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    padding: 7rem 0;
+}
+
+#interface #rodape .sombreamento .container-rodape {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 60%;
+    margin: 0 auto;
+}
+
+#interface #rodape .sombreamento .container-rodape .item-rodape {
+    display: block;
+    width: 31%;
+    color: var(--branco-padrao);
+}
+
+#interface #rodape .sombreamento .container-rodape .sobre img {
+    display: block;
+    width: 150px;
+    margin-bottom: 3rem;
+}
+
+#interface #rodape .sombreamento .container-rodape .sobre .txt-sobre {
+    display: block;
+    font-size: .9rem;
+    line-height: 2;
+    margin-bottom: 3rem;
+}
+
+#interface #rodape .sombreamento .container-rodape .sobre .title-sobre {
+    display: block;
+    color: var(--azul-padrao);
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
+    font-family: Roboto;
+    font-weight: normal;
+    text-shadow: 0 0 2px rgba(255, 255, 255, .2);
+}
+
+#interface #rodape .sombreamento .container-rodape .sobre .social-icons a {
+    color: var(--branco-padrao);
+    width: 1.2rem;
+    margin-right: .75rem;
+}
+
+#interface #rodape .sombreamento .container-rodape .servicos .title-servicos {
+    display: block;
+    color: var(--azul-padrao);
+    margin-bottom: 2rem;
+    font-size: 1.3rem;
+    font-family: Roboto;
+    font-weight: normal;
+    text-shadow: 0 0 2px rgba(255, 255, 255, .2);
+}
+
+#interface #rodape .sombreamento .container-rodape .servicos ul {
+    display: block;
+    width: 100%;
+    list-style: none;
+}
+
+#interface #rodape .sombreamento .container-rodape .servicos ul li {
+    display: block;
+    width: 100%;
+    padding: .5rem 0;
+}
+
+#interface #rodape .sombreamento .container-rodape .servicos ul li a {
+    color: var(--branco-padrao);
+    text-decoration: none;
+    font-size: .9rem;
+}
+
+#interface #rodape .sombreamento .container-rodape .contato .title-contato {
+    display: block;
+    color: var(--azul-padrao);
+    margin-bottom: 2rem;
+    font-size: 1.3rem;
+    font-family: Roboto;
+    font-weight: normal;
+    text-shadow: 0 0 2px rgba(255, 255, 255, .2);
+}
+
+#interface #rodape .sombreamento .container-rodape .contato .container-contato {
+    display: block;
+    width: 100%;
+    padding: 1rem 0;
+}
+
+#interface #rodape .sombreamento .container-rodape .contato .container-contato .txt-contatos {
+    display: block;
+    width: 100%;
+    font-size: .9rem;
+    margin-bottom: 1rem;
+}
+
+#interface #rodape .sombreamento .container-rodape .contato form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+#interface #rodape .sombreamento .container-rodape .contato form input {
+    display: block;
+    width: 100%;
+    padding: 1rem;
+    font-size: .9rem;
+    border-radius: 2rem;
+}
+
+#interface #rodape .sombreamento .container-rodape .contato form button {
+    display: block;
+    background-color: transparent;
+    margin-left: -35px;
+}
+
+#interface #rodape .sombreamento .container-rodape .contato form button i {
+    color: var(--azul-padrao);
+    font-size: 2.75rem;
+}
+
+#interface #rodape .sombreamento .txt-creditos {
+    display: block;
+    width: 60%;
+    margin: 5rem auto 0 auto;
+    color: var(--branco-padrao);
+    font-size: .9rem;
 }
