--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,9 +83,14 @@
     display: block;
     color: var(--branco-padrao);
     font-family: Oswald;
-    font-size: 2rem;
+    font-size: 1.8rem;
     padding: .5rem 1rem;
     text-decoration: none;
+}
+
+#interface .cabecalho .menu li a i {
+    font-size: 1.5rem;
+    margin-right: .5rem;
 }
 
 #interface .cabecalho .menu li a::after {
